--- a/packages/ui/src/components/Icon/styles.css
+++ b/packages/ui/src/components/Icon/styles.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2024 The Backstage Authors
+ * Copyright 2025 The Backstage Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,7 +14,9 @@
  * limitations under the License.
  */
 
-.bui-Icon {
-  width: 1rem;
-  height: 1rem;
+@layer components {
+  .bui-Icon {
+    width: 1rem;
+    height: 1rem;
+  }
 }
