--- a/packages/ui/src/components/PasswordField/PasswordField.styles.css
+++ b/packages/ui/src/components/PasswordField/PasswordField.styles.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2024 The Backstage Authors
+ * Copyright 2025 The Backstage Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,57 +14,59 @@
  * limitations under the License.
  */
 
-.bui-PasswordField {
-  display: flex;
-  flex-direction: column;
-  font-family: var(--bui-font-regular);
-  width: 100%;
-  flex-shrink: 0;
-  /* Reserve space for browser/password manager icon (e.g. 1Password) */
-  --bui-passwordmanager-icon-width: var(--bui-space-1);
-}
-
-.bui-InputVisibility {
-  position: absolute;
-  right: var(--bui-passwordmanager-icon-width);
-  top: 0;
-  bottom: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--bui-fg-primary);
-
-  /* Size: small */
-  &[data-size='small'] {
-    width: 2rem;
-    height: 2rem;
-  }
-  &[data-size='small'] svg {
-    width: 1rem;
-    height: 1rem;
+@layer components {
+  .bui-PasswordField {
+    display: flex;
+    flex-direction: column;
+    font-family: var(--bui-font-regular);
+    width: 100%;
+    flex-shrink: 0;
+    /* Reserve space for browser/password manager icon (e.g. 1Password) */
+    --bui-passwordmanager-icon-width: var(--bui-space-1);
   }
 
-  /* Size: medium */
-  &[data-size='medium'] {
-    width: 2.5rem;
-    height: 2.5rem;
-  }
-  &[data-size='medium'] svg {
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-}
+  .bui-InputVisibility {
+    position: absolute;
+    right: var(--bui-passwordmanager-icon-width);
+    top: 0;
+    bottom: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--bui-fg-primary);
 
-/* Ensure input has enough right padding for our toggle + PM icon */
-.bui-PasswordField .bui-InputWrapper[data-size='small'] .bui-Input {
-  padding-right: calc(2rem + var(--bui-passwordmanager-icon-width));
-}
+    /* Size: small */
+    &[data-size='small'] {
+      width: 2rem;
+      height: 2rem;
+    }
+    &[data-size='small'] svg {
+      width: 1rem;
+      height: 1rem;
+    }
 
-.bui-PasswordField .bui-InputWrapper[data-size='medium'] .bui-Input {
-  padding-right: calc(2.5rem + var(--bui-passwordmanager-icon-width));
+    /* Size: medium */
+    &[data-size='medium'] {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+    &[data-size='medium'] svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+  }
+
+  /* Ensure input has enough right padding for our toggle + PM icon */
+  .bui-PasswordField .bui-InputWrapper[data-size='small'] .bui-Input {
+    padding-right: calc(2rem + var(--bui-passwordmanager-icon-width));
+  }
+
+  .bui-PasswordField .bui-InputWrapper[data-size='medium'] .bui-Input {
+    padding-right: calc(2.5rem + var(--bui-passwordmanager-icon-width));
+  }
 }
