--- a/packages/ui/src/components/Checkbox/styles.css
+++ b/packages/ui/src/components/Checkbox/styles.css
@@ -1,52 +1,70 @@
-.bui-CheckboxRoot {
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 1rem;
-  height: 1rem;
-  box-shadow: inset 0 0 0 1px var(--bui-border);
-  cursor: pointer;
-  border-radius: 2px;
-  transition: background-color 0.2s ease-in-out;
-  background-color: var(--bui-bg-surface-1);
-  padding: 0;
-  flex-shrink: 0;
-}
+/*
+ * Copyright 2025 The Backstage Authors
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
-.bui-CheckboxRoot:focus-visible {
-  transition: none;
-  outline: 2px solid var(--bui-ring);
-  outline-offset: 2px;
-}
+@layer components {
+  .bui-CheckboxRoot {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1rem;
+    height: 1rem;
+    box-shadow: inset 0 0 0 1px var(--bui-border);
+    cursor: pointer;
+    border-radius: 2px;
+    transition: background-color 0.2s ease-in-out;
+    background-color: var(--bui-bg-surface-1);
+    padding: 0;
+    flex-shrink: 0;
+  }
 
-.bui-CheckboxRoot[data-checked] {
-  background-color: var(--bui-bg-solid);
-  box-shadow: none;
-  color: var(--bui-fg-solid);
-}
+  .bui-CheckboxRoot:focus-visible {
+    transition: none;
+    outline: 2px solid var(--bui-ring);
+    outline-offset: 2px;
+  }
 
-.bui-CheckboxLabel {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: var(--bui-space-2);
-  font-size: var(--bui-font-size-3);
-  font-family: var(--bui-font-regular);
-  font-weight: var(--bui-font-weight-regular);
-  color: var(--bui-fg-primary);
-  user-select: none;
+  .bui-CheckboxRoot[data-checked] {
+    background-color: var(--bui-bg-solid);
+    box-shadow: none;
+    color: var(--bui-fg-solid);
+  }
 
-  &:hover {
-    & .bui-CheckboxRoot:not([data-checked]) {
-      box-shadow: inset 0 0 0 1px var(--bui-border-hover);
+  .bui-CheckboxLabel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--bui-space-2);
+    font-size: var(--bui-font-size-3);
+    font-family: var(--bui-font-regular);
+    font-weight: var(--bui-font-weight-regular);
+    color: var(--bui-fg-primary);
+    user-select: none;
+
+    &:hover {
+      & .bui-CheckboxRoot:not([data-checked]) {
+        box-shadow: inset 0 0 0 1px var(--bui-border-hover);
+      }
     }
   }
-}
 
-.bui-CheckboxIndicator {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--bui-fg-solid);
+  .bui-CheckboxIndicator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--bui-fg-solid);
+  }
 }
