--- a/packages/ui/src/components/Table/Table.styles.css
+++ b/packages/ui/src/components/Table/Table.styles.css
@@ -14,136 +14,138 @@
  * limitations under the License.
  */
 
-.bui-Table {
-  width: 100%;
-  caption-side: bottom;
-  border-collapse: collapse;
-}
-
-.bui-TableHeader {
-  border-bottom: 1px solid var(--bui-border);
-  transition: color 0.2s ease-in-out;
-}
-
-.bui-TableHead {
-  text-align: left;
-  padding: var(--bui-space-3);
-  font-size: var(--bui-font-size-3);
-  color: var(--bui-fg-primary);
-}
-
-.bui-TableHeadSortButton {
-  cursor: pointer;
-  user-select: none;
-  display: inline-flex;
-  align-items: center;
-  gap: var(--bui-space-1);
-
-  &:hover svg {
-    opacity: 0.5;
+@layer components {
+  .bui-Table {
+    width: 100%;
+    caption-side: bottom;
+    border-collapse: collapse;
   }
 
-  & svg {
-    opacity: 0;
-    transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+  .bui-TableHeader {
+    border-bottom: 1px solid var(--bui-border);
+    transition: color 0.2s ease-in-out;
   }
 
-  &[data-sort-order='asc'] svg {
-    opacity: 1;
-    transform: rotate(0);
+  .bui-TableHead {
+    text-align: left;
+    padding: var(--bui-space-3);
+    font-size: var(--bui-font-size-3);
+    color: var(--bui-fg-primary);
   }
 
-  &[data-sort-order='desc'] svg {
-    opacity: 1;
-    transform: rotate(180deg);
-  }
-}
-
-.bui-TableBody {
-  color: var(--bui-fg-primary);
-}
-
-.bui-TableRow {
-  border-bottom: 1px solid var(--bui-border);
-  transition: color 0.2s ease-in-out;
-
-  &[data-react-aria-pressable='true'] {
+  .bui-TableHeadSortButton {
     cursor: pointer;
+    user-select: none;
+    display: inline-flex;
+    align-items: center;
+    gap: var(--bui-space-1);
+
+    &:hover svg {
+      opacity: 0.5;
+    }
+
+    & svg {
+      opacity: 0;
+      transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+    }
+
+    &[data-sort-order='asc'] svg {
+      opacity: 1;
+      transform: rotate(0);
+    }
+
+    &[data-sort-order='desc'] svg {
+      opacity: 1;
+      transform: rotate(180deg);
+    }
   }
-}
 
-.bui-TableBody .bui-TableRow:hover {
-  background-color: var(--bui-gray-2);
-}
+  .bui-TableBody {
+    color: var(--bui-fg-primary);
+  }
 
-.bui-TableCell {
-  padding: var(--bui-space-3);
-  font-size: var(--bui-font-size-3);
-}
+  .bui-TableRow {
+    border-bottom: 1px solid var(--bui-border);
+    transition: color 0.2s ease-in-out;
 
-.bui-TableCell {
-  padding: var(--bui-space-3);
-  font-size: var(--bui-font-size-3);
-}
+    &[data-react-aria-pressable='true'] {
+      cursor: pointer;
+    }
+  }
 
-.bui-TableCellContentWrapper {
-  display: inline-flex;
-  flex-direction: row;
-  align-items: center;
-  gap: var(--bui-space-2);
-}
+  .bui-TableBody .bui-TableRow:hover {
+    background-color: var(--bui-gray-2);
+  }
 
-.bui-TableCellIcon,
-.bui-TableCellIcon svg {
-  display: inline-flex;
-  align-items: center;
-  color: var(--bui-fg-primary);
-}
+  .bui-TableCell {
+    padding: var(--bui-space-3);
+    font-size: var(--bui-font-size-3);
+  }
 
-.bui-TableCellContent {
-  display: flex;
-  flex-direction: column;
-  gap: var(--bui-space-0_5);
-}
+  .bui-TableCell {
+    padding: var(--bui-space-3);
+    font-size: var(--bui-font-size-3);
+  }
 
-.bui-TableCellProfile {
-  display: flex;
-  flex-direction: row;
-  gap: var(--bui-space-2);
-  align-items: center;
-}
+  .bui-TableCellContentWrapper {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--bui-space-2);
+  }
 
-.bui-TableCellProfileAvatar {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  vertical-align: middle;
-  border-radius: 100%;
-  user-select: none;
-  font-weight: 500;
-  color: var(--bui-fg-primary);
-  background-color: var(--bui-bg-surface-2);
-  font-size: 1rem;
-  line-height: 1;
-  overflow: hidden;
-  height: 1.25rem;
-  width: 1.25rem;
-}
+  .bui-TableCellIcon,
+  .bui-TableCellIcon svg {
+    display: inline-flex;
+    align-items: center;
+    color: var(--bui-fg-primary);
+  }
 
-.bui-TableCellProfileAvatarImage {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
-}
+  .bui-TableCellContent {
+    display: flex;
+    flex-direction: column;
+    gap: var(--bui-space-0_5);
+  }
 
-.bui-TableCellProfileAvatarFallback {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-  font-size: var(--bui-font-size-2);
-  font-weight: var(--bui-font-weight-regular);
-  box-shadow: inset 0 0 0 1px var(--bui-border);
-  border-radius: var(--bui-radius-full);
+  .bui-TableCellProfile {
+    display: flex;
+    flex-direction: row;
+    gap: var(--bui-space-2);
+    align-items: center;
+  }
+
+  .bui-TableCellProfileAvatar {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    vertical-align: middle;
+    border-radius: 100%;
+    user-select: none;
+    font-weight: 500;
+    color: var(--bui-fg-primary);
+    background-color: var(--bui-bg-surface-2);
+    font-size: 1rem;
+    line-height: 1;
+    overflow: hidden;
+    height: 1.25rem;
+    width: 1.25rem;
+  }
+
+  .bui-TableCellProfileAvatarImage {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+
+  .bui-TableCellProfileAvatarFallback {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: var(--bui-font-size-2);
+    font-weight: var(--bui-font-weight-regular);
+    box-shadow: inset 0 0 0 1px var(--bui-border);
+    border-radius: var(--bui-radius-full);
+  }
 }
