--- a/packages/ui/src/components/Text/styles.css
+++ b/packages/ui/src/components/Text/styles.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2024 The Backstage Authors
+ * Copyright 2025 The Backstage Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,90 +14,92 @@
  * limitations under the License.
  */
 
-.bui-Text {
-  font-family: var(--bui-font-regular);
-  padding: 0;
-  margin: 0;
-}
+@layer components {
+  .bui-Text {
+    font-family: var(--bui-font-regular);
+    padding: 0;
+    margin: 0;
+  }
 
-.bui-Text[data-variant='title-large'] {
-  font-size: var(--bui-font-size-8);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='title-large'] {
+    font-size: var(--bui-font-size-8);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='title-medium'] {
-  font-size: var(--bui-font-size-7);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='title-medium'] {
+    font-size: var(--bui-font-size-7);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='title-small'] {
-  font-size: var(--bui-font-size-6);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='title-small'] {
+    font-size: var(--bui-font-size-6);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='title-x-small'] {
-  font-size: var(--bui-font-size-5);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='title-x-small'] {
+    font-size: var(--bui-font-size-5);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='body-large'] {
-  font-size: var(--bui-font-size-4);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='body-large'] {
+    font-size: var(--bui-font-size-4);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='body-medium'] {
-  font-size: var(--bui-font-size-3);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='body-medium'] {
+    font-size: var(--bui-font-size-3);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='body-small'] {
-  font-size: var(--bui-font-size-2);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='body-small'] {
+    font-size: var(--bui-font-size-2);
+    line-height: 140%;
+  }
 
-.bui-Text[data-variant='body-x-small'] {
-  font-size: var(--bui-font-size-1);
-  line-height: 140%;
-}
+  .bui-Text[data-variant='body-x-small'] {
+    font-size: var(--bui-font-size-1);
+    line-height: 140%;
+  }
 
-.bui-Text[data-weight='regular'] {
-  font-weight: var(--bui-font-weight-regular);
-}
+  .bui-Text[data-weight='regular'] {
+    font-weight: var(--bui-font-weight-regular);
+  }
 
-.bui-Text[data-weight='bold'] {
-  font-weight: var(--bui-font-weight-bold);
-}
+  .bui-Text[data-weight='bold'] {
+    font-weight: var(--bui-font-weight-bold);
+  }
 
-.bui-Text[data-color='primary'] {
-  color: var(--bui-fg-primary);
-}
+  .bui-Text[data-color='primary'] {
+    color: var(--bui-fg-primary);
+  }
 
-.bui-Text[data-color='secondary'] {
-  color: var(--bui-fg-secondary);
-}
+  .bui-Text[data-color='secondary'] {
+    color: var(--bui-fg-secondary);
+  }
 
-.bui-Text[data-color='danger'] {
-  color: var(--bui-fg-danger);
-}
+  .bui-Text[data-color='danger'] {
+    color: var(--bui-fg-danger);
+  }
 
-.bui-Text[data-color='warning'] {
-  color: var(--bui-fg-warning);
-}
+  .bui-Text[data-color='warning'] {
+    color: var(--bui-fg-warning);
+  }
 
-.bui-Text[data-color='success'] {
-  color: var(--bui-fg-success);
-}
+  .bui-Text[data-color='success'] {
+    color: var(--bui-fg-success);
+  }
 
-.bui-Text[data-truncate] {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
+  .bui-Text[data-truncate] {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
-.bui-Text[data-as='span'],
-.bui-Text[data-as='label'],
-.bui-Text[data-as='strong'],
-.bui-Text[data-as='em'],
-.bui-Text[data-as='small'] {
-  display: inline-block;
+  .bui-Text[data-as='span'],
+  .bui-Text[data-as='label'],
+  .bui-Text[data-as='strong'],
+  .bui-Text[data-as='em'],
+  .bui-Text[data-as='small'] {
+    display: inline-block;
+  }
 }
