Fix body background
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -9098,6 +9098,10 @@
   }
 }
 
+body {
+  background-color: var(--bui-bg);
+}
+
 :root {
   --bui-font-regular: system-ui;
   --bui-font-monospace: ui-monospace, "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", monospace;
