--- a/packages/ui/src/components/Dialog/Dialog.styles.css
+++ b/packages/ui/src/components/Dialog/Dialog.styles.css
@@ -49,7 +49,7 @@
   border-bottom: 1px solid var(--bui-border);
 }
 
-.bui-Dialog [slot="title"] {
+.bui-Dialog [slot='title'] {
   font-size: var(--bui-font-size-3);
 }
 
@@ -68,20 +68,20 @@
 
 /* Keyframe animations */
 @keyframes fade-in {
-  from { 
-    opacity: 0; 
+  from {
+    opacity: 0;
   }
-  to { 
-    opacity: 1; 
+  to {
+    opacity: 1;
   }
 }
 
 @keyframes fade-out {
-  from { 
-    opacity: 1; 
+  from {
+    opacity: 1;
   }
-  to { 
-    opacity: 0; 
+  to {
+    opacity: 0;
   }
 }
 
