--- a/packages/ui/src/components/Menu/Menu.styles.css
+++ b/packages/ui/src/components/Menu/Menu.styles.css
@@ -121,19 +121,10 @@
 }
 
 .bui-MenuItemListBox {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 2rem;
-  padding-inline: var(--bui-space-2);
-  border-radius: var(--bui-radius-2);
-  outline: none;
-  cursor: default;
-  color: var(--bui-fg-primary);
-  font-size: var(--bui-font-size-3);
-  gap: var(--bui-space-6);
+  padding-inline: var(--bui-space-1);
+  display: block;
 
-  &:hover {
+  &:hover .bui-MenuItemWrapper {
     background: var(--bui-bg-surface-2);
     color: var(--bui-fg-primary);
   }
