--- a/packages/ui/src/components/Dialog/Dialog.styles.css
+++ b/packages/ui/src/components/Dialog/Dialog.styles.css
@@ -34,6 +34,7 @@
   max-width: calc(100vw - 3rem);
   display: flex;
   flex-direction: column;
+  outline: none;
 }
 
 /* Dialog entering animation */
