--- a/packages/ui/src/css/utilities/mb.css
+++ b/packages/ui/src/css/utilities/mb.css
@@ -86,7 +86,7 @@
   /* Breakpoint xs */
   @media (min-width: 640px) {
     .xs\:bui-mb {
-      margin-bottom: var(--pb-xs);
+      margin-bottom: var(--mb-xs);
     }
 
     .xs\:bui-mb-0\.5 {
@@ -157,7 +157,7 @@
   /* Breakpoint sm */
   @media (min-width: 768px) {
     .sm\:bui-mb {
-      margin-bottom: var(--pb-sm);
+      margin-bottom: var(--mb-sm);
     }
 
     .sm\:bui-mb-0\.5 {
@@ -228,7 +228,7 @@
   /* Breakpoint md */
   @media (min-width: 1024px) {
     .md\:bui-mb {
-      margin-bottom: var(--pb-md);
+      margin-bottom: var(--mb-md);
     }
 
     .md\:bui-mb-0\.5 {
@@ -299,7 +299,7 @@
   /* Breakpoint lg */
   @media (min-width: 1280px) {
     .lg\:bui-mb {
-      margin-bottom: var(--pb-lg);
+      margin-bottom: var(--mb-lg);
     }
 
     .lg\:bui-mb-0\.5 {
@@ -370,7 +370,7 @@
   /* Breakpoint xl */
   @media (min-width: 1536px) {
     .xl\:bui-mb {
-      margin-bottom: var(--pb-xl);
+      margin-bottom: var(--mb-xl);
     }
 
     .xl\:bui-mb-0\.5 {
