--- a/packages/ui/src/css/utilities/ml.css
+++ b/packages/ui/src/css/utilities/ml.css
@@ -86,7 +86,7 @@
   /* Breakpoint xs */
   @media (min-width: 640px) {
     .xs\:bui-ml {
-      margin-left: var(--pl-xs);
+      margin-left: var(--ml-xs);
     }
 
     .xs\:bui-ml-0\.5 {
@@ -157,7 +157,7 @@
   /* Breakpoint sm */
   @media (min-width: 768px) {
     .sm\:bui-ml {
-      margin-left: var(--pl-sm);
+      margin-left: var(--ml-sm);
     }
 
     .sm\:bui-ml-0\.5 {
@@ -228,7 +228,7 @@
   /* Breakpoint md */
   @media (min-width: 1024px) {
     .md\:bui-ml {
-      margin-left: var(--pl-md);
+      margin-left: var(--ml-md);
     }
 
     .md\:bui-ml-0\.5 {
@@ -299,7 +299,7 @@
   /* Breakpoint lg */
   @media (min-width: 1280px) {
     .lg\:bui-ml {
-      margin-left: var(--pl-lg);
+      margin-left: var(--ml-lg);
     }
 
     .lg\:bui-ml-0\.5 {
@@ -370,7 +370,7 @@
   /* Breakpoint xl */
   @media (min-width: 1536px) {
     .xl\:bui-ml {
-      margin-left: var(--pl-xl);
+      margin-left: var(--ml-xl);
     }
 
     .xl\:bui-ml-0\.5 {
