--- a/packages/ui/src/css/core.css
+++ b/packages/ui/src/css/core.css
@@ -29,5 +29,7 @@
   body {
     background-color: var(--bui-bg);
     color: var(--bui-fg-primary);
+    font-family: var(--bui-font-regular);
+    font-weight: var(--bui-font-weight-regular);
   }
 }
