--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -239,6 +239,8 @@
   body {
     background-color: var(--bui-bg);
     color: var(--bui-fg-primary);
+    font-family: var(--bui-font-regular);
+    font-weight: var(--bui-font-weight-regular);
   }
 }
 
