--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -241,6 +241,7 @@
     color: var(--bui-fg-primary);
     font-family: var(--bui-font-regular);
     font-weight: var(--bui-font-weight-regular);
+    font-size: var(--bui-font-size-4);
   }
 }
 
