--- a/packages/ui/src/css/core.css
+++ b/packages/ui/src/css/core.css
@@ -31,5 +31,6 @@
     color: var(--bui-fg-primary);
     font-family: var(--bui-font-regular);
     font-weight: var(--bui-font-weight-regular);
+    font-size: var(--bui-font-size-3);
   }
 }
