Fix font smoothing in BUI
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -242,6 +242,8 @@
     font-family: var(--bui-font-regular);
     font-weight: var(--bui-font-weight-regular);
     font-size: var(--bui-font-size-3);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
