--- a/packages/ui/src/components/Avatar/Avatar.module.css
+++ b/packages/ui/src/components/Avatar/Avatar.module.css
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+@layer tokens, base, components, utilities;
+
 @layer components {
   .bui-AvatarRoot {
     display: inline-flex;
