--- a/packages/ui/src/components/FieldError/FieldError.module.css
+++ b/packages/ui/src/components/FieldError/FieldError.module.css
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+@layer tokens, base, components, utilities;
+
 @layer components {
   .bui-FieldError {
     display: inline-block;
