--- a/packages/ui/src/components/Text/Text.module.css
+++ b/packages/ui/src/components/Text/Text.module.css
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+@layer tokens, base, components, utilities;
+
 @layer components {
   .bui-Text {
     font-family: var(--bui-font-regular);
