fix(ui): Set color-scheme, notably to have proper scrollbar theming
Signed-off-by: Gabriel Dugny <gabriel.dugny@believe.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -247,6 +247,14 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+
+  [data-theme-mode="dark"] {
+    color-scheme: dark;
+  }
+
+  [data-theme-mode="light"] {
+    color-scheme: light;
+  }
 }
 
 @layer components;
